--- a/gallery.html
+++ b/gallery.html
@@ -32,6 +32,33 @@
       <h2>CAR EVENT GALLERY</h2>
       <div class="gallery">
         <div class="year">
+          <h3>SR 10.0</h3>
+          <div class="images">
+            <img src="images/gallery/sr10/1.JPG" alt="SR 10.0 - Event 1">
+            <img src="images/gallery/sr10/2.JPG" alt="SR 10.0 - Event 2">
+            <img src="images/gallery/sr10/3.jpg" alt="SR 10.0 - Event 3">
+            <img src="images/gallery/sr10/4.jpg" alt="SR 10.0 - Event 4">
+            <img src="images/gallery/sr10/5.JPG" alt="SR 10.0 - Event 5">
+            <img src="images/gallery/sr10/6.JPG" alt="SR 10.0 - Event 6">
+            <img src="images/gallery/sr10/7.jpg" alt="SR 10.0 - Event 7">
+            <img src="images/gallery/sr10/9.jpg" alt="SR 10.0 - Event 9">
+            <img src="images/gallery/sr10/10.jpg" alt="SR 10.0 - Event 10">
+          </div>
+        </div>
+        <div class="year">
+          <h3>SR 9.0</h3>
+          <div class="images">
+            <img src="images/gallery/sr9/1.JPG" alt="SR 9.0 - Event 1">
+            <img src="images/gallery/sr9/2.JPG" alt="SR 9.0 - Event 2">
+            <img src="images/gallery/sr9/3.JPG" alt="SR 9.0 - Event 3">
+            <img src="images/gallery/sr9/4.JPG" alt="SR 9.0 - Event 4">
+            <img src="images/gallery/sr9/5.JPG" alt="SR 9.0 - Event 5">
+            <img src="images/gallery/sr9/6.JPG" alt="SR 9.0 - Event 6">
+            <img src="images/gallery/sr9/7.JPG" alt="SR 9.0 - Event 7">
+            <img src="images/gallery/sr9/8.JPG" alt="SR 9.0 - Event 8">
+            <img src="images/gallery/sr9/9.JPG" alt="SR 9.0 - Event 9">
+          </div>
+        </div>
           <h3>SR 8.0</h3>
           <div class="images">
             <img src="images/gallery/sr8/1.webp" alt="SR 8.0 - Event 1">
