--- a/gallery.html
+++ b/gallery.html
@@ -39,7 +39,7 @@
             <img src="images/gallery/sr10/3.jpg" alt="SR 10.0 - Event 3">
             <img src="images/gallery/sr10/4.jpg" alt="SR 10.0 - Event 4">
             <img src="images/gallery/sr10/5.JPG" alt="SR 10.0 - Event 5">
-            <img src="images/gallery/sr10/6.JPG" alt="SR 10.0 - Event 6">
+            <img src="images/gallery/sr10/6.jpg" alt="SR 10.0 - Event 6">
             <img src="images/gallery/sr10/7.jpg" alt="SR 10.0 - Event 7">
             <img src="images/gallery/sr10/9.jpg" alt="SR 10.0 - Event 9">
             <img src="images/gallery/sr10/10.jpg" alt="SR 10.0 - Event 10">
