--- a/gallery.html
+++ b/gallery.html
@@ -59,6 +59,7 @@
             <img src="images/gallery/sr9/9.JPG" alt="SR 9.0 - Event 9">
           </div>
         </div>
+        <div class="year">
           <h3>SR 8.0</h3>
           <div class="images">
             <img src="images/gallery/sr8/1.webp" alt="SR 8.0 - Event 1">
