--- a/index.html
+++ b/index.html
@@ -395,19 +395,21 @@
     <div class="sponsor-container">
       <div class="sponsor-images">
         <!-- Add sponsor images with appropriate source URLs -->
-        <img src="./images/sponsor_logos/anysys.svg" alt="Sponsor 1">
-        <img src="./images/sponsor_logos/MyPitCrew.jpg" alt="Sponsor 2">
-        <img src="./images/sponsor_logos/realis.jpg" alt="Sponsor 3">
-        <img src="./images/sponsor_logos/Avinya.png" alt="Sponsor 4">
-        <img src="./images/sponsor_logos/BHOR_logo.png" alt="Sponsor 5">
-        <img src="./images/sponsor_logos/Braid.png" alt="Sponsor 6">
-        <img src="./images/sponsor_logos/Burnout_logo.png" alt="Sponsor 7">
-        <img src="./images/sponsor_logos/Destyntion_travel_logo.png" alt="Sponsor 8">
-        <img src="./images/sponsor_logos/GBR.png" alt="Sponsor 9">
-        <img src="./images/sponsor_logos/iSpark.jpg" alt="Sponsor 10">
-        <img src="./images/sponsor_logos/SolidWorks-Logo.png" alt="Sponsor 11">
-        <img src="./images/sponsor_logos/Junofast.png" alt="Sponsor 12">
-        <img src="./images/sponsor_logos/Lapp_logo.png" alt="Sponsor 13">
+        <img src="./images/sponsor_logos/1.png" alt="Sponsor 1">
+        <img src="./images/sponsor_logos/2.png"  alt="Sponsor 2">
+        <img src="./images/sponsor_logos/3.png"  alt="Sponsor 3">
+        <img src="./images/sponsor_logos/4.png"  alt="Sponsor 4">
+        <img src="./images/sponsor_logos/5.png"  alt="Sponsor 5">
+        <img src="./images/sponsor_logos/6.png"  alt="Sponsor 6">
+        <img src="./images/sponsor_logos/7.png"  alt="Sponsor 7">
+        <img src="./images/sponsor_logos/8.png"  alt="Sponsor 8">
+        <img src="./images/sponsor_logos/9.png"  alt="Sponsor 9">
+        <img src="./images/sponsor_logos/10.png"  alt="Sponsor 10">
+        <img src="./images/sponsor_logos/11.png"  alt="Sponsor 11">
+        <img src="./images/sponsor_logos/12.png"  alt="Sponsor 12">
+        <img src="./images/sponsor_logos/13.png"  alt="Sponsor 13">
+        <img src="./images/sponsor_logos/14.png"  alt="Sponsor 14">
+        <img src="./images/sponsor_logos/1.png" alt="Sponsor 1">
       </div>
     </div>
     <div class="thank-you-message">
