--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <li><a href="#Our_cars">Our Cars</a></li>
       <li><a href="#Events">Events</a></li>
       <li><a href="gallery.html">Our Gallery</a></li>
-      <li><a href="team1.html">Team Members</a></li>
+<!--       <li><a href="team1.html">Team Members</a></li> -->
       <li><a href="#Sponsors">Sponsors</a></li>
       <li><a href="contact_us.html">Contact Us</a></li>
     </ul>
