--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
     <div class="thank-you-message">
       <h2><span class="red-text">Special </span>Thanks to Our Sponsors!</h2>
     </div>
-    <h3>LEVELS OF SPONSORSHIP</h3>
+<!--     <h3>LEVELS OF SPONSORSHIP</h3>
     <div class="sponsorship-levels">
       <div class="card title">
         <div class="card-body">
@@ -447,7 +447,7 @@
           <p class="card-text">Less than 5K</p>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <a class="contact-button" href="https://drive.google.com/file/d/1GZ7v6-f4P9AXl0aUAFQlByTAWL6Q4it1/view?usp=sharing"
       onclick="scrollToContact()">SPONSORSHIP BROCHURE
